修改体检界面

--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
     "pages/new_index/new_index",
     "pages/qrcode/qrcode",
     "pages/appointment/appointment",
-    "pages/apply-physical/apply-physical"
+    "pages/apply-physical/apply-physical",
+    "pages/tijian_details/index"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
